data/derived/comb/progs/unify/prog0480.ml.out
Characters 29-43:
  let stringOfList f l = "[" ^ (List.map f l) ^ "]";;
                               ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
